# noob-agentic-project

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  agent.py  cli.py  pyproject.toml  report_generator.py  test_integration.py  test_reviewer.py
src/: agent.py  bad_ai.py  cli.py  config.py  database.py  main.py  reviewer.py
tests/: test_integration.py  test_reviewer.py
